methods.basics.Methods.scala.error
Erreur de compilation :
Methods:15: error: not found: value Biscuit
  } while (!Biscuit)
            ^